--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -51,7 +51,7 @@ common: &default_settings
 # If your application has other named environments, configure them here.
 development:
   <<: *default_settings
-  app_name: 'spelling (Development)'
+  monitor_mode: false
 
 test:
   <<: *default_settings
